--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -480,3 +480,5 @@ en:
     blank_project: "Invalid blank project"
     invalid_annotator: "Invalid annotator %{user}"
     invalid_assignee: "Invalid assignee %{user}"
+  mail_subject_assignments_ready: "[%{team} - %{project}] Assignments update is ready"
+  mail_body_assignments_ready: "The assignments update process was completed successfully."
