Ticket #6769: Add paragraphs on import notification email

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -477,9 +477,7 @@ en:
     invalid_annotator: "Invalid annotator %{user}"
     invalid_assignee: "Invalid assignee %{user}"
   team_import_completed_subject: "Your data import has completed"
-  team_import_completed_mail: "Hello,
-
-    Your data import job into %{app_name} has completed. You can check %{worksheet_url} to review the status of each item to be imported.
-    Note that you can restart the import after you fix any errors that are reported there - the previously-imported items will not be duplicated.
-
-    — The %{app_name} team"
+  team_import_completed_mail: "<p>Hello,</p>
+    <p>Your data import job into %{app_name} has completed. You can check %{worksheet_url} to review the status of each item to be imported.</p>
+    <p>Note that you can restart the import after you fix any errors that are reported there - the previously-imported items will not be duplicated.</p>
+    <p>— The %{app_name} team</p>"
