--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -355,6 +355,8 @@ en:
   mail_update_status: "%{author} marked \"%{title}\" as %{status}"
   mail_assign_project: "%{author} assigned a project to you. It's titled:"
   mail_unassign_project: "%{author} unassigned a project from you. It's titled:"
+  mail_subject_assign_project: "[%{team} - %{project}] A project was assigned to you"
+  mail_subject_unassign_project: "[%{team} - %{project}] A project was unassigned from you"
   archive_keep_backup: "Video Vault"
   archive_pender_archive: "Keep screenshots"
   archive_archive_is: "Archive.is"
@@ -479,7 +481,24 @@ en:
     invalid_annotator: "Invalid annotator %{user}"
     invalid_assignee: "Invalid assignee %{user}"
   mail_subject_assignments_ready: "[%{team} - %{project}] Assignments update is ready"
-  mail_body_assignments_ready: "The assignments update process was completed successfully."
+  mail_body_assignments_ready_assign: "Hello %{username},
+  
+  The assignments update process was completed successfully.
+  
+  Project '%{project_title}' (%{project_url}) and its items and tasks are now assigned to %{assignee}.
+  
+  Thanks,
+  
+  — The %{app_name} team"
+  mail_body_assignments_ready_unassign: "Hello %{username},
+  
+  The assignments update process was completed successfully.
+  
+  Project '%{project_title}' (%{project_url}) and its items and tasks are now unassigned from %{assignee}.
+  
+  Thanks,
+  
+  — The %{app_name} team"
   team_import_completed_subject: "Your data import has completed"
   team_import_completed_mail: "<p>Hello,</p>
     <p>Your data import job into %{app_name} has completed. You can check %{worksheet_url} to review the status of each item to be imported.</p>
