--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -358,8 +358,7 @@ en:
   mail_subject_assign_project: "[%{team} - %{project}] A project was assigned to you"
   mail_subject_unassign_project: "[%{team} - %{project}] A project was unassigned from you"
   mail_subject_delete_user: "[%{team}] A user was deleted"
-  mail_delete_user_anonymous: "anonymous user %{id}"
-  mail_body_delete_user: "A user account was deleted and its content was reassigned to %{url}"
+  mail_body_delete_user: "A user account was deleted and its content was reassigned to anonymous user %{id}"
   archive_keep_backup: "Video Vault"
   archive_pender_archive: "Keep screenshots"
   archive_archive_is: "Archive.is"
