--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -386,6 +386,7 @@ en:
   bot_cant_add_review_to_task: "Sorry, a bot can't review a task"
   task_suggestion_invalid_value: "A suggestion must be a JSON hash with a 'suggestion' (the actual value that is copied to the task answer when accepted) and a 'comment' (displayed to users)"
   tag_text_id_not_found: "Sorry, there is no tag with the provided identifier"
+  annotation_type_language_label: "Language"
   project_export_download_mail_csv: "Hello!
 
 
